class Config:
    MAIL_SERVER = "smtp.gmail.com"
    MAIL_PORT = 465
    MAIL_USE_TLS = False
    MAIL_USE_SSL = True
    MAIL_USERNAME = "vocmonitorsystem@gmail.com"
    MAIL_PASSWORD = "krrr hqwg bdfw vgfo"
    MAIL_DEFAULT_SENDER = "vocmonitorsystem@gmail.com"
