@startuml
left to right direction

class MQTTManager {
    - server: str
    - port: int
    - client: object
    - db_manager: object
    - notification_manager: object
    - topics: dict
    - voc_index: dict
    - threshold_exceeded: bool
    - last_alarm_state: bool
    + __init__(db, notification_manager)
    + on_connect(client, userdata, flags, reason_code, properties)
    + on_message(client, userdata, message)
    + run_mqtt()
    + subscribe(topic, device_name)
    + unsubscribe(topic)
    + load_topics_from_db()
    + clear_topics()
    + subscribe_to_all_topics()
    + print_loaded_topics()
    + threshold_exceeded_notification(payload)
    + esp_notif_alarm(voc, device)
}

class Routes {
    - db: object
    - mqtt: object
    - notification_manager: object
    - mail: object
    - routes: Blueprint
    - socket_connection_established: bool
    - selected_device: str
    + __init__(db, mqtt, notification_manager, mail)
    + create_routes()
}

class Config {
    + MAIL_SERVER: str = "smtp.gmail.com"
    + MAIL_PORT: int = 465
    + MAIL_USE_TLS: bool = False
    + MAIL_USE_SSL: bool = True
    + MAIL_USERNAME: str = "sender email"
    + MAIL_PASSWORD: str = "password"
    + MAIL_DEFAULT_SENDER: str = "sender email"
}

class VOCMonitor {
    + __init__()
    + initialize_app(self)
    + run()
}

class DatabaseManager {
    - db_name: str
    - selected_device: str
    + __init__()
    + set_selected_device(new_device)
    + get_selected_device()
    + initialize_db()
    + _connect()
    + insert(table_name, timestamp, temperature, humidity, voc)
    + clear_table(table_name)
    + create_table_data(table_name)
    + create_table_devices()
    + new_device(device_name, topic)
    + delete_device(device_id, device_name)
    + get_all_devices()
    + get_device_topics()
    + create_table_notification_history()
    + new_notification(timestamp, message, voc)
    + delete_notification(notification_id)
    + get_notification_history()
    + create_user_settings_table()
    + set_user_settings(ad_1, ad_2, ad_3, ad_4, ad_5, ad_6, ...)
    + get_user_settings()
    + get_user_settings_notifications()
    + get_user_email_address(self)
    + set_default_settings(self)
    + print_table(self, table_name)
    + drop_table(self, table_name)
    + get_last_row(self, table_name)
    + get_all_rows(self, table_name)
    + get_avg(self, time_period, table_name)
    + get_min_max(self, time_period, table_name)
    + is_valid_device_name(device_name)
}

class NotificationManager {
    - socket_connection_established: bool
    - last_notification: int
    - notification_sent: bool
    - last_esp_notification: int
    - esp_notification_sent: bool
    - last_email_notification: int
    - email_notification_sent: bool
    - last_temp_notification: int
    - temp_notification_sent: bool
    - last_humi_notification: int
    - humi_notification_sent: bool
    - notifications_on: bool
    - notification_message: str
    - notifications_threshold: int
    - cooldown: int
    - email_notifications_on: bool
    - email_cooldown: int
    - email_notification_threshold: int
    - esp_alarm_enabled: bool
    - alarm_time: int
    - send_esp_alarm: bool
    - temp_notifications_enabled: bool
    - temp_threshold: int
    - temp_cooldown: int
    - humi_notifications_enabled: bool
    - humi_threshold: int
    - humi_cooldown: int
    + __init__(app, socketio, mail, db)
    + is_esp_alarm_enabled()
    + update_notification_settings()
    + check_for_notifications(voc, temperature, humidity)
    + send_esp_alarm_notif(voc)
    + check_email_notif(voc)
    + send_email(receiver, subject, body)
    + send_email_voc_threshold_exceeded(timestamp, voc_level, message)
    + register_socket_events()
}

VOCMonitor "1" -- "1" Routes: uses
VOCMonitor "1" -left- "1" MQTTManager: uses
VOCMonitor "1" -- "1" DatabaseManager: uses
VOCMonitor "1" -- "1" Config: uses
VOCMonitor "1" -right- "1" NotificationManager: uses
@enduml